--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "18",
-    "react-dom": "18",
+    "framer-motion": "^11.0.24",
     "next": "^14.2.0",
-    "framer-motion": "^11.0.24"
+    "react": "18",
+    "react-dom": "18"
   },
   "devDependencies": {
     "autoprefixer": "10.0.1",
-    "postcss": "8",
-    "tailwindcss": "3.3.0",
     "eslint": "8",
-    "eslint-config-next": "14.1.0"
+    "eslint-config-next": "14.1.0",
+    "postcss": "8",
+    "tailwindcss": "3.3.0"
   }
 }
