--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
     "framer-motion": "^11.0.24",
     "next": "^14.2.0",
     "react": "18",
