--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
+    "dompurify": "^3.1.2",
     "framer-motion": "^11.0.24",
     "next": "^14.2.0",
     "react": "18",
